# Multilingual-Chatbot

./: .gitignore  MVP.ipynb  README.md  app.py  demo_app.py  pyproject.toml  server_start.py  streamlit_app.py  test.py  test_app.py
.ipynb_checkpoints/: MVP-Testing-checkpoint.ipynb  MVP-checkpoint.ipynb  demo_app_testing-checkpoint.ipynb
App UI/: chat_chris_english.html  chat_chris_spanish.html  chat_jared_english.html  chat_jared_french.html  chat_roshan_english.html
agents/: Untitled.ipynb  agents.py  workflow.py
agents/.ipynb_checkpoints/: utils-checkpoint.py  workflow-checkpoint.py
ml_chat/agents/: Untitled.ipynb  agents.py  prompts.py  utils.py  workflow.py
ml_chat/playground/: MVP-Testing.ipynb  MVP.ipynb  MVP_Testing.ipynb  Run_Workflow.ipynb  Untitled.ipynb
ml_chat/playground/data/: Expedition Aya - Aug 21 Weekly Update.txt  user_data.txt
ml_chat/server/: start_server.py  user_list.csv  user_list_english.csv
